--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-
 th {
     color: black;
     height: 40px;
@@ -15,7 +14,9 @@ body{
 }
 
 table{
-    width: 50%;
-    
+    width: 20px;
+
 
 }
+
+
